# GetSubtitle

./: Makefile  Makefile.am  Makefile.in  README  README.md  README~  config.status  configure  configure.ac  configure.scan
.deps/: Charconvert.Po  MD5Checksum.Po  SVPToolBox.Po  SubTransFormat.Po  main.Po
autom4te.cache/: output.1  requests  traces.0  traces.1
src/: Charconvert.cpp  Charconvert.h  MD5Checksum.cpp  MD5Checksum.h  SVPToolBox.cpp  SVPToolBox.cpp~  SVPToolBox.h  SubTransFormat.cpp  SubTransFormat.cpp~  SubTransFormat.h  main.cpp
