#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
AC_INIT(GetSubtitle, 1.0, firnsan@gmail.com)
AC_CONFIG_SRCDIR([src/MD5Checksum.cpp])
#AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE(GetSubtitle, 1.0 ,firnsan@gmail.com)


# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

#AC_CONFIG_MACRO_DIR([m4])

#AC_PROG_LIBTOOL

AC_OUTPUT(Makefile)
